# rawdog

./: CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE.txt  README.md  release-plz.toml
.github/: dependabot.yml
.github/workflows/: publish-release-bin.yml  release-bin.yml  release.yml  rust.yml  slash-commands.yml  test-cross-comp.yml
rawbit/: Cargo.toml
rawbit/src/: args.rs  common.rs  job.rs  lib.rs  main.rs  parse.rs
res/: rawbit.xcf
scripts/: render-help.py
src/: args.rs  error.rs  job.rs  main.rs  parse.rs
xtask/: Cargo.toml
xtask/src/: gen_cli_docs.rs  main.rs
