[package]
name = "rawbit"
authors = ["Carter J. Canedy <cartercanedy42@gmail.com>"]
description = "A camera RAW image preprocessor and importer"
license = "MIT"
repository = "https://github.com/cartercanedy/rawbit"
version = "0.1.3"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false }
clap = { version = "4.5.20", features = ["derive", "env", "string", "unicode"] }
futures = "0.3.31"
phf = { version = "0.11.2", features = ["macros"] }
rawler = "0.6.0"
rayon = "1.10.0"
smlog = "0.1.4"
tokio = { version = "1.41.1", features = ["fs", "full", "io-std", "io-util", "macros", "rt", "rt-multi-thread", "tokio-macros", "windows-sys"] }
tokio-stream = { version = "0.1.16", features = ["fs"], default-features = false }
zips = "0.1.7"

[profile.release]
debug = "full"
lto = "fat"
codegen-units = 1
