[package]
name = "rawbit"
authors = ["Carter J. Canedy <cartercanedy42@gmail.com>"]
description = "A camera RAW image preprocessor and importer"
categories = ["imaging", "photography"]
keywords = ["imaging", "photography", "image-post-processing", "camera-RAW", "RAW"]
license = "MIT"
repository = "https://github.com/cartercanedy/rawbit"
version = "0.1.3"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false }
clap = { version = "4.5.20", features = ["derive", "env", "string", "unicode"] }
futures = "0.3.31"
phf = { version = "0.11.2", features = ["macros"] }
rawler = "0.6.0"
rayon = "1.10.0"
smlog = "0.1.4"
tokio = { version = "1.41.1", features = ["fs", "macros", "rt-multi-thread", "windows-sys"] }
tokio-stream = { version = "0.1.16", features = ["fs"], default-features = false }
zips = "0.1.7"

[profile.release]
lto = "fat"
codegen-units = 1

[changelog]
body = """

## [{{ version | trim_start_matches(pat="v") }}]\
    {%- if release_link -%}\
        ({{ release_link }})\
    {% endif %} \
    - {{ timestamp | date(format="%Y-%m-%d") }}
{% for group, commits in commits | group_by(attribute="group") %}
### {{ group | upper_first }}
    {% for commit in commits %}
        {%- if commit.scope -%}
            - *({{commit.scope}})* {% if commit.breaking %}[**breaking**] {% endif %}\
                {{ commit.message }}{{ self::username(commit=commit) }}\
                {%- if commit.links %} \
                    ({% for link in commit.links %}[{{link.text}}]({{link.href}}) {% endfor -%})\
                {% endif %}
        {% else -%}
            - {% if commit.breaking %}[**breaking**] {% endif %}{{ commit.message }}{{ self::username(commit=commit) }}{{ self::pr(commit=commit) }}
        {% endif -%}
    {% endfor -%}
{% endfor %}
{%- if remote.contributors %}
### Contributors
{% for contributor in remote.contributors %}
    * @{{ contributor.username }}
{%- endfor %}
{% endif -%}
{%- macro username(commit) -%}
    {% if commit.remote.username %} (by @{{ commit.remote.username }}){% endif -%}
{% endmacro -%}
{%- macro pr(commit) -%}
    {% if commit.remote.pr_number %} - #{{ commit.remote.pr_number }}{% endif -%}
{% endmacro -%}
"""
